Fix blog post double scroll

--- a/src/components/Layout/index.css
+++ b/src/components/Layout/index.css
@@ -1,8 +1,7 @@
 @import "../../styles/all.css";
 
 :global {
-  html,
-  body {
+  #___gatsby {
     @include Breakpoint-tabletAndAbove {
       overflow-x: hidden;
     }
